# euclidea_solver

./: .gitignore  Makefile  README.md  condition.jison  index.html  pubspec.yaml  setup.cfg  sketch.js
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/euclidea_solver/: MainActivity.kt
euclidea_solver/: canvas.py  solution.py  solver.py
euclidea_solver/entity/: circle.py  line.py  point.py
euclidea_solver/levels/alpha/: 1.1.py  1.2.py  1.3.py  1.4.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bounded_intersection.dart  circle.dart  circle_obj_handler.dart  circles_intersection.dart  fixed_intersection.dart  home_app.dart  intersection.dart  line.dart  line_circle_intersection.dart  line_obj_handler.dart  lines_intersection.dart  main.dart  move_obj_handler.dart  obj.dart  obj1d.dart  obj_handler.dart  obj_painter.dart  tool_icon.dart  two_vertices_handler.dart  vertex.dart  vertex_obj_handler.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: test_canvas.py  test_entity.py  test_solution.py  test_solver.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
