[metadata]
name = euclidea_solver
version = 1.0
author = Robert Chen
author_email = robert.chen.kfc@gmail.com
description = A tool for solving Euclidea puzzles.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:

[options.packages.find]
include = euclidea_solver
